kubernetes/phpmyadmin/overlays/k3s/traefik.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: phpmyadmin
  namespace: mariadb-galera
  labels:
    app.kubernetes.io/instance: phpmyadmin
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`phpmyadmin.k3s.<path:secret/data/gitlab/domain#url>`)
      kind: Rule
      services:
        - name: phpmyadmin
          port: 8080
